--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div class="card">
   <h2>CSS3 Animation</h2>
-  <p>This is a CSS3 animation example.</p>
+  <p>This is a CSS3 animation eassssassxample.</p>
 </div>
 
 </body>
